# QB_Connector_CoA_Python_Fall_2025

./: .gitignore  .~lock.company_data.xlsx#  README.md  company_data.xlsx  pyproject.toml
.github/workflows/: ci.yml
src/: Account_Charts.py  __init__.py  __main__.py  cli.py  compare.py  comparer.py  excel_reader.py  models.py  qb_gateway.py  reporting.py  runner.py
test/: __init__.py  test_compare.py  test_excel_reader.py
