[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pywin32 (>=311,<312)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-coverage (>=0.0,<0.1)",
    "pyinstaller (>=6.16.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)"
]
